* Minor update: (181111)
- Added [MySQL8 Brook] to the ALPHA list.

* Minor update: (181109)
- Prefer custom package lists if found. [ALPHA.custom] will be used in place of [ALPHA.default], same for OMEGA.
- Include 'completed' after each logged operation.

* Minor update: (181022)
- Added [Neo4J WireGuard] to the ALPHA list.
- Added [SonarrTrackTV QSonarr3 SickChill QSickChill] to the OMEGA list.

* Minor update: (180909)
- Added [DotNETSDK firebird] to the ALPHA list.

* Minor update: (180808)
- Moved 'package managers' section ahead of [NVIDIA_GPU_DRV] in the ALPHA list.

* Minor update: (180706)
- Added [QJDK10] to the ALPHA list.

* Minor update: (180630)
- Added new 'multimedia tools' section with [ffmpeg Qffmpeg] to the ALPHA list.
- Added [Deluge QBittorrent QBittorrent4 rtorrent] to the OMEGA list.

* Minor update: (180620)
- Added [InfluxDB QOpenVPN TincVPN] to the ALPHA list.
- Moved [QHeadPhones] to load after [Headphones] in the OMEGA list.

* Minor update: (180617)
- Added [HybridBackup] to the ALPHA list.
- Added [HappyGet2] to the OMEGA list.
- Moved [linux-station] to load after [container-station] in the ALPHA list.

* Minor update: (180615)
- Moved [Qsirch] to load after [JRE] in the ALPHA list.

* Minor update: (180612)
- Added [PostgreSQL QPostgreSQL] to the ALPHA list.

* Minor update: (180606)
- Added new 'databases' section with [QMongoDB QMariaDB CubeSQL PimCore] to the ALPHA list.
- Added [Caddy] to the ALPHA list.
- Added [Lidarr] to the OMEGA list.

* Minor update: (180422)
- Added [Qsirch NVIDIA_GPU_DRV nodejsv6 nodejsv8 QVS linux-station] to the ALPHA list.

* Minor update: (180320)
- Added [Entware] to the ALPHA list.

** Major update: (180224)
- Will not perform a sort when installing or updating this package. If another package is updated or installed at the same time, this could create a corrupt [qpkg.conf] file. To mitigate this risk, SortMyQPKGs will now only sort on shutdown, or when manually requested at the CLI.