@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="181111"
+QPKG_VER="181113"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="An automatic sorter for installed QPKGs to ensure they launch in a preset sequence when your NAS next boots-up"
 QPKG_RC_NUM="500"
