@@ -8,6 +8,7 @@ Entware             # load before NVIDIA_GPU_DRV - affects Resource Monitor metr
 # assorted QNAP packages
 update_qpkg_conf
 NVIDIA_GPU_DRV      # load before HD_Station & linux-station
+netmgr              # 'Network & Virtual Switch'
 
 # high-level language interpreters
 Python
